--- a/profapp/static/angular_templates/submit_publish_dialog.html
+++ b/profapp/static/angular_templates/submit_publish_dialog.html
@@ -8,80 +8,79 @@
     <div class="modal-body">
         {{ _('You are going to ' + action + ' material `%(data.publication.material.title)s` of company `%(data.publication.material.company.name)s` at portal
         `%(data.publisher_membership.portal.name)s`') }}<br/>
-        <div ng-if="action !== 'UNPUBLISH' && action !== 'DELETE' && action !== 'UNDELETE'">
-            <br/>
-            {{ _('Select portal division') }}<span
-                af-validation-answer="data_validation:portal_division_id"></span><br/>
-            <div ng-repeat="division in data.publisher_membership.portal.divisions_publicable">
-                <label>
-                    <input
-                            name="material_details_publish_dialog_division"
-                            ng-value="division.id" ng-model="data.publication.portal_division_id"
-                            type="radio"> {{ division.name }}
-                </label>
-            </div>
-            <hr/>
-            <div class="selected_tags">
 
-                <ui-select ng-disabled="!data.publication.portal_division_id"
-                           ng-model="$parent.$parent.data.publication.tags" class="form-control" sortable="true"
-                           multiple>
-                    <ui-select-match placeholder="{{ ::_('Select tag...') }}">{{$item.text}}</ui-select-match>
-                    <ui-select-choices repeat="tag in get_tags_for_selected_division($select.search)">
-                        <div ng-bind-html="(tag.text | highlight: $select.search)"></div>
-                        <small ng-bind-html="tag.description | highlight: $select.search"></small>
-                    </ui-select-choices>
-                    <ui-select-no-choice>
-                        <em ng-if="!$parent.$parent.data.publication.tags.length"
-                            class="error">{{ ::_('there is no tags for this division') }}</em>
-                        <em ng-if="$parent.$parent.data.publication.tags.length"
-                            class="notice">{{ ::_('there is no more tags for this division') }}</em>
-                    </ui-select-no-choice>
-
-                </ui-select>
-            </div>
-            <hr/>
-            {{ ::_('Select publication visibility') }}<span
-                af-validation-answer="data_validation:visibility"></span><br/>
-            <label
-                    ng-class="{'disabled': !visibility_available(visibility_type)}"
-                    class="db p025em {{ 'publication-bg-VISIBILITY-' + visibility_type }}"
-                    ng-repeat="visibility_type in ['OPEN', 'REGISTERED', 'PAYED']">
-                <input name="material_details_publish_dialog_visibility"
-                       ng-disabled="!visibility_available(visibility_type)"
-                       ng-value="visibility_type" ng-model="data.publication.visibility"
-                       type="radio"/>
-                {{ visibility_type }}
-                <span class="fr"
-                      ng-bind-html="publication_count(data.publisher_membership.current_membership_plan_issued, visibility_type, data.publication_count)|html"></span>
+        <br/>
+        {{ _('Select portal division') }}<span
+            af-validation-answer="data_validation:portal_division_id"></span><br/>
+        <div ng-repeat="division in data.publisher_membership.portal.divisions_publicable">
+            <label>
+                <input
+                        name="material_details_publish_dialog_division"
+                        ng-value="division.id" ng-model="data.publication.portal_division_id"
+                        type="radio"> {{ division.name }}
             </label>
+        </div>
+        <hr/>
+        <div class="selected_tags">
+
+            <ui-select ng-disabled="!data.publication.portal_division_id"
+                       ng-model="$parent.data.publication.tags" class="form-control" sortable="true"
+                       multiple>
+                <ui-select-match placeholder="{{ ::_('Select tag...') }}">{{$item.text}}</ui-select-match>
+                <ui-select-choices repeat="tag in get_tags_for_selected_division($select.search)">
+                    <div ng-bind-html="(tag.text | highlight: $select.search)"></div>
+                    <small ng-bind-html="tag.description | highlight: $select.search"></small>
+                </ui-select-choices>
+                <ui-select-no-choice>
+                    <em ng-if="!$parent.data.publication.tags.length"
+                        class="error">{{ ::_('there is no tags for this division') }}</em>
+                    <em ng-if="$parent.data.publication.tags.length"
+                        class="notice">{{ ::_('there is no more tags for this division') }}</em>
+                </ui-select-no-choice>
+
+            </ui-select>
+        </div>
+        <hr/>
+        {{ ::_('Select publication visibility') }}<span
+            af-validation-answer="data_validation:visibility"></span><br/>
+        <label
+                ng-class="{'disabled': !visibility_available(visibility_type)}"
+                class="db p025em {{ 'publication-bg-VISIBILITY-' + visibility_type }}"
+                ng-repeat="visibility_type in ['OPEN', 'REGISTERED', 'PAYED']">
+            <input name="material_details_publish_dialog_visibility"
+                   ng-disabled="!visibility_available(visibility_type)"
+                   ng-value="visibility_type" ng-model="data.publication.visibility"
+                   type="radio"/>
+            {{ visibility_type }}
+            <span class="fr"
+                  ng-bind-html="publication_count(data.publisher_membership.current_membership_plan_issued, visibility_type, data.publication_count)|html"></span>
+        </label>
+        <hr/>
+        {{ _('Select publication date') }}<span
+            af-validation-answer="data_validation:publishing_tm"></span><br/>
+        <input pr-date-time-picker class="form-control" ng-model="data.publication.publishing_tm"/>
+        <div ng-if="is_selection_division_event()">
+            {{ _('Select event begin date') }}<span
+                af-validation-answer="data_validation:event_begin_tm"></span><br/>
+            <input pr-date-time-picker class="form-control" ng-model="data.publication.event_begin_tm"/>
+        </div>
+        <div ng-if="is_selection_division_event()">
+            {{ _('Select event end date') }}<span
+                af-validation-answer="data_validation:event_end_tm"></span><br/>
+            <input pr-date-time-picker class="form-control" ng-model="data.publication.event_end_tm"/>
+        </div>
+        <div ng-if="data.can_material_also_be_published === false || data.can_material_also_be_published === true">
             <hr/>
-            {{ _('Select publication date') }}<span
-                af-validation-answer="data_validation:publishing_tm"></span><br/>
-            <input pr-date-time-picker class="form-control" ng-model="data.publication.publishing_tm"/>
-            <div ng-if="is_selection_division_event()">
-                {{ _('Select event begin date') }}<span
-                    af-validation-answer="data_validation:event_begin_tm"></span><br/>
-                <input pr-date-time-picker class="form-control" ng-model="data.publication.event_begin_tm"/>
-            </div>
-            <div ng-if="is_selection_division_event()">
-                {{ _('Select event end date') }}<span
-                    af-validation-answer="data_validation:event_end_tm"></span><br/>
-                <input pr-date-time-picker class="form-control" ng-model="data.publication.event_end_tm"/>
-            </div>
-            <div ng-if="data.can_material_also_be_published === false || data.can_material_also_be_published === true">
-                <hr/>
-                <label ng-class="{disabled: !data.can_material_also_be_published}"><input
-                        ng-disabled="!data.can_material_also_be_published"
-                        ng-model="$parent.$parent.also_publish"
-                        type="checkbox">&nbsp;{{ _('also publish material') }}</label><br/>
-                <div ng-if="!data.can_material_also_be_published">
-                    {{ _('Sorry, you company `%(data.publisher_membership.company.name)s` have no permission to publish at portal
+            <label ng-class="{disabled: !data.can_material_also_be_published}"><input
+                    ng-disabled="!data.can_material_also_be_published"
+                    ng-model="$parent.data.also_publish"
+                    type="checkbox">&nbsp;{{ _('also publish material') }}</label><br/>
+            <div ng-if="!data.can_material_also_be_published">
+                {{ _('Sorry, you company `%(data.publisher_membership.company.name)s` have no permission to publish at portal
                     %(data.publisher_membership.portal.name)s') }}<br/>
-                </div>
-                {{ _('You can send message to company administration') }}<br/>
-                <textarea disabled="disabled" style="width: 100%" ng-model="message"></textarea>
             </div>
+            {{ _('You can send message to company administration') }}<br/>
+            <textarea disabled="disabled" style="width: 100%" ng-model="message"></textarea>
         </div>
     </div>
 
@@ -90,7 +89,7 @@
         <button ng-if="action === 'SUBMIT'" class="btn btn-primary"
                 ng-disabled="!$af.isActionAllowed(data, 'save')"
                 type="button" ng-click="$af.save(data)"><span ng-if="!data.also_publish">{{ _('Do submit') }}</span>
-            <span ng-if="also_publish">{{ _('Do submit & publish') }}</span>
+            <span ng-if="data.also_publish">{{ _('Do submit & publish') }}</span>
         </button>
 
         <button ng-if="action !== 'SUBMIT' " class="btn btn-primary"
